# mlops-portfolio

./: .dvcignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  UBIQUITOUS_LANGUAGE.md  baseline_comparison.py  dvc.yaml  params.yaml  pyproject.toml  skills-lock.json
.dvc/: config
airflow/: .gitignore  CHEATSHEET.md  README.md  lab-instructions.md  set-env.ps1  setup.ps1
docker/: Dockerfile
docs/: .gitignore  3_tvae_generative_classifier_plan_v2.md  Data_analysis_interview_challange.docx  ab_test_comparison.json  data_contract.md  eda_findings.md  evaluation_report.json  explainability_implementation_plan.md  katib_best_params.json  optuna_best_params.json  phase4b_results_and_next_steps.md  split_strategy_analysis.md  tune_stage_manual_verification.md  tvae_mlflow_wrapper.py  vae_fix_plan.md  vae_tuning_context_v1.md
experiments/: _gmm_vae_grid_worker.py  gmm_optuna_experiment.py  gmm_vae_grid_experiment.py
k8s/: README.md  pvc-kubeflow.yaml  pvc.yaml
models/: .gitignore
notebooks/: eda.ipynb  explainability_poc.ipynb  explainability_poc_executed.ipynb  vae_eda.ipynb  vae_eda_v2.ipynb  vae_fatal_representation.ipynb
scripts/: analyse_experiments.py  analyze_f1.py  check_metrics.py  read_nb.py  tune_threshold.py  vae_audit.py
src/: README.md  config.py  losses.py  metrics.py  plots.py  utils.py
tests/: __init__.py  test_augmenter.py  test_config.py  test_drift_detector.py  test_encode.py  test_evaluate.py  test_featurize.py  test_ingest.py  test_optuna_tuner.py  test_register.py  test_train_dl.py  test_train_gmm.py  test_train_ml.py  (+3 more)
(+73 files in other folders)
