[project]
name = "mlops-portfolio"
version = "0.1.0"
description = "End-to-end MLOps portfolio: DVC + MLflow + Kubeflow + Optuna"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyter",
    "ipykernel>=7.2.0",
    "torch>=2.11.0",
    "mlflow>=3.10.1",
    "papermill>=2.7.0",
    "dvc>=3.0",
    "great-expectations>=1.0",
    "kfp>=2.0",
    "kubernetes>=28.0",
    "scipy>=1.11",
    "pyyaml",
    "joblib",
    "ctgan>=0.10",
    "xgboost>=2.0",
    "imbalanced-learn>=0.14.1",
    "plotly>=6.7.0",
    "shap>=0.45.1",
    "lime>=0.2.0.1",
    "optuna>=4.8.0",
    "kfp-kubernetes>=2.16.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
